--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,10 +10,11 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
- 
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
-    <title>WND</title>
+    <title>MatieState</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
