--- a/public/index.html
+++ b/public/index.html
@@ -23,5 +23,7 @@
     <div id="root-portal"></div>
     <div id="portal-modal-loading"></div>
    
+    <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script>
+
   </body>
 </html>
